[gd_scene load_steps=2 format=3 uid="uid://cjwjdk37vcy3g"]

[ext_resource type="Script" uid="uid://67qxlp74wn0h" path="res://citymanage.gd" id="1_73p4p"]

[node name="Citymanage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_73p4p")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 3.0
offset_right = 191.0
offset_bottom = 87.0
theme_override_font_sizes/font_size = 36
text = "Go Back"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 403.0
offset_top = 217.0
offset_right = 765.0
offset_bottom = 339.0
theme_override_font_sizes/font_size = 48
text = "Sell Building #1"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 706.0
offset_top = 3.0
offset_right = 1314.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 64
text = "Clicked: 0"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 313.0
offset_top = 373.0
offset_right = 860.0
offset_bottom = 482.0
theme_override_font_sizes/font_size = 48
text = "Buy a Stock Building #2
$100"
